--- a/Changes
+++ b/Changes
@@ -2,3 +2,6 @@ Revision history for Mojolicious-Plugin-Form.
 
 {{$NEXT}}
        - initial version
+       
+0.001  2014-05-03
+       - Initial release.
