--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-Form.
 
 {{$NEXT}}
+       - release to cpan
 
 0.002  2014-05-03 03:24:22 CEST
        - initial version
