--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-Form.
 
 {{$NEXT}}
+       - badges in pod
 
 0.004  2014-08-16 09:19:35 CEST
        - adjusted travis
