--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-Form.
 
 {{$NEXT}}
+       - add badges in pod
 
 0.005  2014-08-16 23:39:44 CEST
        - badges in pod
