--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-Form.
 
 {{$NEXT}}
+       - improve coverage
 
 0.006  2015-04-07 16:30:03 CEST
        - add badges in pod
